trying to fix epander img being squashed on iphone

--- a/static/css/component.css
+++ b/static/css/component.css
@@ -95,6 +95,7 @@ body {
 .og-expander-inner {
 	padding: 50px 30px;
 	height: 100%;
+	height: auto;
 }
 
 .og-close {
